[package]
name = "state-space-tween"
version = "0.1.0"
authors = ["Evan Pratten <braincell-check@gmail.com>"]
edition = "2018"
description = "Tools for tweening in time-domain state-space"
documentation = "https://docs.rs/state-space-tween"
readme = "README.md"
homepage = "https://github.com/braincell-check/state-space-tween"
repository = "https://github.com/braincell-check/state-space-tween"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "^0.2"
flo_curves = "^0.6"
chrono = "^0.4"